[package]
name = "rs-easy-p2p"
version = "0.1.0"
edition = "2021"

[lib]
name = "easyp2p"
path = "src/lib.rs"

[[bin]]
name = "rs-easy-p2p"
path = "src/bin.rs"

[[bin]]
name = "signaling-server"
path = "src/signaling.rs"

[dependencies]
anyhow = "1.0.86"
webrtc = "0.11.0"
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
base64 = "0.22.1"
zstd = "0.13.2"
bincode = "1.3.3"
bytes = "1.7.1"
axum = "0.7.5"
tower-http = { version = "0.5.2", features = ["cors"] }
futures = "0.3.30"
uuid = { version = "1.10.0", features = ["v4"] }
async-stream = "0.3.5"
rand = "0.8.5"
reqwest = { version = "0.12.7", features = ["json", "stream"] }
futures-util = "0.3.30"
